src/objects/Ownership_A__c.object
<CustomObject>
    <fields>
        <fullName>Account_Role__c</fullName>
        <label>Company Role</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio</relationshipLabel>
        <relationshipName>Ownership_A</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Ownership</relationshipLabel>
        <relationshipName>Ownership_A</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Ownership (A)</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Ownership Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownership (A)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>